--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,78 @@ body {
     display: flex;
     flex-wrap: wrap;
     background-color: white;
-    margin: 100px auto;
-    box-shadow: 10px 10px rgba(0, 280, 255, 0.024);
+    margin: 100px auto 0 auto;
 }
 
 .cell {
     border: 1px solid whitesmoke;
+}
+
+/* #button-area {
+    background-color: white;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 30px auto;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 100px;
+}
+
+.btn {
+    height: 50px;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    color: black;
+    background-color: azure;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    background-color:cornsilk;
+    color: rgba(0, 0, 0, 0.5);
+} */
+
+#slider-container {
+    margin: 0 auto;
+}
+
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 25px;
+    width: 100%;
+    background: rgba(200, 255, 238, 0.726);
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
+}
+
+#slider-value {
+    margin: 0 auto;
+    text-align: center;
+
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
 }
